--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "End-to-End Testing with Cypress",
   "scripts": {
-    "start": "serve todos"
+    "start": "serve todos",
+    "cy:open": "cypress open",
+	"cy:run": "cypress run"
   },
   "author": "Alexander Guyer <guyera@oregonstate.edu>",
   "license": "MIT",
   "dependencies": {
     "serve": "^14.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@testing-library/cypress": "^10.0.1",
+    "cypress": "^13.6.5"
+  }
 }
