--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "serve todos",
     "cy:open": "cypress open",
-	"cy:run": "cypress run"
+    "cy:run": "cypress run",
+	"test": "start-server-and-test start http://localhost:3000 cy:run"
   },
   "author": "Alexander Guyer <guyera@oregonstate.edu>",
   "license": "MIT",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^10.0.1",
-    "cypress": "^13.6.5"
+    "cypress": "^13.6.5",
+    "start-server-and-test": "^2.0.3"
   }
 }
